--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
-alive_progress==3.1.1
 matplotlib==3.7.1
 numpy==1.24.2
 pandas==2.0.0
 Pillow==9.5.0
 opencv-python==4.7.0.72
+seaborn==0.12.2
+tqdm==4.65.0
